--- a/Q4CsvParser.Web/Views/Home/FormattedDisplay.cshtml
+++ b/Q4CsvParser.Web/Views/Home/FormattedDisplay.cshtml
@@ -9,3 +9,37 @@
 
 @* TODO Fill in the logic to create a view here *@
 
+<div class="row">
+    <div class="col-md-12">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <table class="table table-responsive">
+                    @if (Model.HasHeader())
+                    {
+                    <thead>
+                        <tr>
+                            <th>No.</th>
+                            @foreach (var column in Model.CsvTable.HeaderRow.Columns)
+                            {
+                            <th scope="col">@column.Value</th>
+                            }
+                        </tr>
+                    </thead>
+                    }
+                    <tbody>
+                        @for (int i = 0; i < Model.CsvTable.Rows.Count; i++)
+                        {
+                        <tr>
+                            <td>@(i+1)</td>
+                            @foreach (var column in Model.CsvTable.Rows[i].Columns)
+                            {
+                                <td>@column.Value</td>
+                            }
+                        </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
