--- a/Q4CsvParser.Web/Views/Home/Index.cshtml
+++ b/Q4CsvParser.Web/Views/Home/Index.cshtml
@@ -7,13 +7,13 @@
 
 @Html.Partial("~/Views/Home/_TaskDescription.cshtml")
 
-@using (Html.BeginForm("Index", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Index", "Home", FormMethod.Post, new { enctype = "multipart/form-data",id="csvUploadForm" }))
 {
     <div class="form-group">
         @Html.LabelFor(m => m.File)
-        @Html.TextBoxFor(m => m.File, new {type="file", names="file"})
+        @Html.TextBoxFor(m => m.File, new {type="file", names="file", accept=".csv"})
         @Html.LabelFor(m => m.ContainsHeader)
         @Html.CheckBoxFor(m => m.ContainsHeader)
     </div>
-    <input class="btn btn-primary" type="submit" />
+    <input class="btn btn-primary" id="csvFileSubmit" type="submit" />
 }
