--- a/Q4CsvParser.Web/Views/Shared/_Layout.cshtml
+++ b/Q4CsvParser.Web/Views/Shared/_Layout.cshtml
@@ -34,7 +34,8 @@
         @RenderBody()
 
     </div>
-    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jquery");
+    @Scripts.Render("~/bundles/custom");
     @RenderSection("scripts", required: false)
 </body>
 </html>
